[project]
name = "spark-gx-pilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.0"
dependencies = [
    "datasets>=4.1.1",
    "great-expectations",
    "pyspark==3.5.1",
    "pyspark-huggingface",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pre-commit>=4.3.0",
]
